# equitravel

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: app.py  config.py  database.py  main.py  models.py  schemas.py
api/routers/: events.py  scrape.py  vendors.py  venues.py
api/tests/: conftest.py  test_events.py  test_health.py  test_vendors.py  test_venues.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: EventMap.tsx  Header.tsx  TripEstimate.tsx
frontend/src/hooks/: api.ts
frontend/src/pages/: EventDetailPage.tsx  EventsPage.tsx  VendorsPage.tsx  VenuesPage.tsx
frontend/src/styles/: index.css
scraper/: data.py  engine.py  scheduler.py  seed.py
scraper/miners/: auctions.py  experiences.py  hotels.py  races.py  tickets.py  trips.py
scraper/tests/: test_miners.py
